--- a/web/src/index.html
+++ b/web/src/index.html
@@ -9,35 +9,61 @@
   </head>
   <body>
     <div class="container">
-      <h1>Dolgozók</h1>
+            <!-- Button trigger modal -->
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Launch demo modal
+      </button>
 
-      <div class="addform">
-        <div class="input">
-          <label for="name" class="form-label">
-            Név
-          </label>
-          <input type="text" id="name"
-          class="form-control">
-        </div>
-        <div class="input">
-          <label for="city" class="form-label">
-            Település
-          </label>
-          <input type="text" id="city"
-          class="form-control">
-        </div>
-        <div class="input">
-          <label for="salary" class="form-label">
-            Fizetés
-          </label>
-          <input type="text" id="salary"
-          class="form-control">
-        </div>
-        <div>
-          <button class="btn btn-primary mt-2"
-          id="addButton">Mentés</button>
+      <!-- Modal -->
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="addform">
+                <div class="input">
+                  <label for="name" class="form-label">
+                    Név
+                  </label>
+                  <input type="text" id="name"
+                  class="form-control">
+                </div>
+                <div class="input">
+                  <label for="city" class="form-label">
+                    Település
+                  </label>
+                  <input type="text" id="city"
+                  class="form-control">
+                </div>
+                <div class="input">
+                  <label for="salary" class="form-label">
+                    Fizetés
+                  </label>
+                  <input type="text" id="salary"
+                  class="form-control">
+                </div>
+                <div>
+                  <button class="btn btn-primary mt-2"
+                  id="addButton">Mentés</button>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
         </div>
       </div>
+
+      <h1>Dolgozók</h1>
+
+      
       
       <table class="table table-striped">
         <thead>
@@ -52,6 +78,7 @@
       </table>
 
     </div>
+    <script src="bootstrap.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
